force-app/main/default/objects/SPEN_PSRStaging__c/SPEN_PSRStaging__c.object-meta.xml
<CustomObject>
    <description>Object for Staging Data</description>
    <label>PSR Staging</label>
    <nameField>
        <displayFormat>PST-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PSR Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>