force-app/main/default/objects/SPEN_PSRStaging__c/fields/SPEN_ADQMAction__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ADQMAction__c</fullName>
    <description>Choose what will be the ADQM Action.</description>
    <label>ADQM Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Update</fullName>
            </value>
            <value>
                <fullName>Delete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>