force-app/main/default/objects/SPEN_PSRStaging__c/fields/SPEN_ADQMLastModifiedDateTime__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ADQMLastModifiedDateTime__c</fullName>
    <description>It holds the ADQM Last Modified Datetime</description>
    <label>ADQM Last Modified DateTime</label>
    <type>DateTime</type>
</CustomField>