force-app/main/default/objects/SPEN_PSRStaging__c/fields/SPEN_Code__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Code__c</fullName>
    <description>Takes Code for PSR Staging</description>
    <label>Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>