force-app/main/default/objects/SPEN_PSRStaging__c/fields/SPEN_EffectiveDateFrom__c.field-meta.xml
<CustomField>
    <fullName>SPEN_EffectiveDateFrom__c</fullName>
    <description>Takes the Effective Date From</description>
    <label>Effective Date From</label>
    <type>Date</type>
</CustomField>