force-app/main/default/objects/SPEN_PSRStaging__c/fields/SPEN_EffectiveDateTo__c.field-meta.xml
<CustomField>
    <fullName>SPEN_EffectiveDateTo__c</fullName>
    <description>It takes Effective Date To</description>
    <label>Effective Date To</label>
    <type>Date</type>
</CustomField>