force-app/main/default/objects/SPEN_PSRStaging__c/fields/SPEN_ExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ExpiryDate__c</fullName>
    <description>It takes Expiry Date</description>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>