force-app/main/default/objects/SPEN_PSRStaging__c/fields/SPEN_FirstLanguage__c.field-meta.xml
<CustomField>
    <fullName>SPEN_FirstLanguage__c</fullName>
    <label>First Language</label>
    <length>20</length>
    <type>Text</type>
</CustomField>