force-app/main/default/objects/SPEN_PSRStaging__c/fields/SPEN_PremiseID__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PremiseID__c</fullName>
    <description>Takes Premise Id.</description>
    <externalId>true</externalId>
    <label>Premise ID</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>