force-app/main/default/objects/SPEN_PSRStaging__c/fields/SPEN_PsrVulnerabilityTypeId__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PsrVulnerabilityTypeId__c</fullName>
    <externalId>true</externalId>
    <label>PSR Vulnerability Type ID</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>