force-app/main/default/objects/SPEN_PSRStaging__c/fields/SPEN_SyncComment__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SyncComment__c</fullName>
    <description>Hold the Sync comment</description>
    <label>Sync Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>