force-app/main/default/objects/SPEN_PSRStaging__c/fields/SPEN_SyncStatus__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SyncStatus__c</fullName>
    <description>Checks the status of Sync</description>
    <label>Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Successful</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>