force-app/main/default/objects/SPEN_PSRStaging__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SPEN_Code__c</columns>
    <columns>SPEN_PsrVulnerabilityTypeId__c</columns>
    <columns>SPEN_PremiseID__c</columns>
    <columns>SPEN_ADQMAction__c</columns>
    <columns>SPEN_SyncStatus__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SPEN_PremiseID__c</field>
        <operation>equals</operation>
        <value>2181333</value>
    </filters>
    <label>All</label>
</ListView>