force-app/main/default/objects/SPEN_PSRStaging__c/listViews/TODAY.listView-meta.xml
<ListView>
    <fullName>TODAY</fullName>
    <columns>NAME</columns>
    <columns>SPEN_Code__c</columns>
    <columns>SPEN_PsrVulnerabilityTypeId__c</columns>
    <columns>SPEN_PremiseID__c</columns>
    <columns>SPEN_ADQMAction__c</columns>
    <columns>SPEN_SyncStatus__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>3/22/2023 12:00 AM</value>
    </filters>
    <label>TODAY</label>
</ListView>